# lazy-git-ext

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: add.rs  amend.rs  clean.rs  commit.rs  common.rs  fetch.rs  lazy.rs  lib.rs  push.rs  root.rs  sync.rs
